# ocaml-inventory

./: .gitignore  README.md  dune-project  inventory.opam
.circleci/: config.yml
lib/dao/: dune  item.ml  item.mli
