; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam
(library
 (name dao)
 (public_name inventory.dao)
 (libraries pgx_async)
 (synopsis "This is a short description of the sub1 library.")
 (preprocess (pps ppx_jane)))